# itisFarzinBot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.minimal  LICENSE  README.md  config.py  docker-entrypoint.sh  main.py  minimal.Dockerfile  pyproject.toml  requirements-minimal.txt  requirements-optional.txt  requirements.txt  settings.py  setup.py
.github/: dependabot.yml
.github/workflows/: docker-build-push.yml  python-tests.yaml
bot/: __main__.py  bot.py  settings.py
bot/builtin_plugins/: admin.py  data.py  manager.py
bot/core/: __init__.py  dispatcher.py  is_public_use.py  plugin_manager.py
bot/plugins/: data.py  manager.py  status.py
bot/types/: __init__.py  callback_query.py  message.py
config/: config.sample.yaml
data/: .env.example  config.sample.yaml
example_plugin/: ping.py
example_plugins/: data.py  ping.py
